Actions
Bug #13529
closeddis: symbol 'g_error' is multiply-defined
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
ld: fatal: symbol 'g_error' is multiply-defined: (file dis_target.o type=OBJT; file dis_main.o type=OBJT); ld: fatal: symbol 'g_error' is multiply-defined: (file dis_target.o type=OBJT; file dis_util.o type=OBJT); ld: fatal: symbol 'g_error' is multiply-defined: (file dis_target.o type=OBJT; file dis_list.o type=OBJT); ld: fatal: file processing errors. No output written to dis
Testing done: build/install/boot
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit e860a055849021760ba50651d1d9d174f9ecd8c6
commit e860a055849021760ba50651d1d9d174f9ecd8c6 Author: Toomas Soome <tsoome@me.com> Date: 2021-02-14T21:28:42.000Z 13529 dis: symbol 'g_error' is multiply-defined Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Yuri Pankov <yuripv@yuripv.dev> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions