13529 dis: symbol 'g_error' is multiply-defined Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Yuri Pankov <yuripv@yuripv.dev> Approved by: Richard Lowe <richlowe@richlowe.net>